# biped

./: README.md
robot_arm/: CMakeLists.txt  package.xml
robot_arm/config/: ctrl.yaml
robot_arm/launch/: RobotArm_Simulation.launch
robot_arm/scripts/: publish.py
robot_arm/stl/: Arm_LowerArm_Simple.stl  Arm_Shoulder_Simple.stl  Arm_UpperArm_Simple.stl
robot_arm/urdf/: model.urdf  model2.urdf
robot_assist/: CMakeLists.txt  package.xml
robot_assist/include/robot_assist/: matplotlib.hpp
robot_assist/src/: assist_dual.cpp  dxl_imu.cpp  dxl_torq.cpp  imu_sub.cpp
